Feature/first draft (#2)
* first draft

* before clippy fix

* clippy fix

* multithreaded works

* rayon

* clippy

* basic frontend

* basic frontend

* basic frontend: single threaded works

* basic frontend: multithread and rayon works

* fix test imports

* creating tiles mutlithreaded is working
sending via websockets too

ToDo: write tile data into canvas element in client

* file import fixed
changed property types

* refactor

* tiles work

* tiles working!!!

* increase image size and iterations

* moved to own directory

* java single threaded

* multi threaded

* multi threaded

* clean up

* restructuring

* use f64
change calculation

* refactor fractal calculation to use center point and zoom factor

* improved FE

* refactor stuff

* refactor stuff

* config

* palette

* julia_island is a pita

* add missing zoom calculation

* fix bugs, fix tiled stuff

* java multithreading working, but different result/image :-(

* make java multithreading work

* read palettes working

* use different color map

* missing class files

* read resource as stream

* readme

* imageviewer for static pngs

* fix bootstrap
added images

* add/remove images

* more images

* more images

* sort order

* use real domain

* if used in production

* more images

* sort by timestamp in filename

* more images

* more images

* more images

* more images

* first attempt at varnish cache

* created at nices

* cache without nginx

* hopefully this helps varnish

* more images

* more images

* more images

* 2 column layout

* more images

* more images

* remove image server

---------

Co-authored-by: Georg Schinnerl <gsc@foryouandyourcustomers.com>
Co-authored-by: bumzack <bumkzacktraraqgmail.com>